update logo, button components

--- a/client/src/components/UI/Logo/Logo.module.scss
+++ b/client/src/components/UI/Logo/Logo.module.scss
@@ -2,8 +2,9 @@
 	position: absolute;
 	top: 50%;
 	left: 0;
+	padding-top: 0.12em;
 	color: var(--primary-color);
-	font-weight: 700;
+	font-weight: 100;
 	text-transform: uppercase;
 	letter-spacing: 0.05em;
 	transform: translateY(-50%);
@@ -13,25 +14,15 @@
 	--cursor-color: rgba(var(--border-color), 0.5);
 	width: 0;
 	overflow: hidden;
-	border-right: 0.5rem solid var(--cursor-color);
+	border-right: 0.12rem solid var(--cursor-color);
 	white-space: nowrap;
 	animation:
-		blink 1.2s step-end 2 forwards,
-		typing calc(var(--text-type-width) * 0.0091s) steps(round(calc(var(--text-type-width) * 0.11))) 3s forwards;
-}
-
-
-@keyframes blink {
-	0%, 100% {
-		border-color: var(--cursor-color);
-	}
-	50% {
-		border-color: transparent;
-	}
+		typing calc(var(--text-type-width) * 0.0091s) steps(round(calc(var(--text-type-width) * 0.11))) 0.16s forwards;
 }
 
 @keyframes typing {
 	to {
-		width: calc(var(--text-type-width) * 1px + 0.7rem);
+		width: calc(var(--text-type-width) * 1px);
+		border-right-width: 0;
 	}
 }
