--- a/client/src/components/UI/Button/Button.module.scss
+++ b/client/src/components/UI/Button/Button.module.scss
@@ -1,18 +1,29 @@
 .button {
 	display: flex;
+	justify-content: center;
 	align-items: center;
-	border: none;
+	padding: 0.375rem 0.75rem;
+	border: 1px solid rgba(0, 0, 0, 0.08);
+	border-radius: 0.25em;
 	color: var(--secondary-color);
-	background: transparent;
+	background-color: var(--background-color-main);
 	cursor: pointer;
+	transition:
+		color 0.15s ease-in-out,
+		background-color 0.15s ease-in-out,
+		border-color 0.15s ease-in-out,
+		box-shadow 0.15s ease-in-out;
 
+	&.block {
+		width: 100%;
+	}
 	&:hover {
-		color: var(--primary-color);
+		background-color: var(--footer-bg);
 	}
 }
 
 .icon {
-	width: 24px;
-	height: 24px;
+	width: 1.3rem;
+	height: 1.3rem;
 	fill: currentColor;
 }
