--- a/client/src/components/UI/Links/Link/Link.module.scss
+++ b/client/src/components/UI/Links/Link/Link.module.scss
@@ -1,7 +1,9 @@
 .link {
 	display: flex;
 	align-items: center;
+	gap: 0.1em;
 	color: var(--secondary-color);
+	line-height: 1;
 	cursor: pointer;
 
 	&:hover {
@@ -10,7 +12,7 @@
 }
 
 .icon {
-	width: 24px;
-	height: 24px;
+	width: 1.3em;
+	height: 1.3em;
 	fill: currentColor;
 }
