--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -1,17 +1,18 @@
 html {
-	font-size: var(--font-size-base);
-	background-color: var(--background-color-main);
+	font-size: var(--font-size-md);
+	background-color: var(--color-bg-page);
 }
 
 body {
 	min-height: 100vh;
-	max-width: var(--width-content);
+	max-width: var(--app-max-width);
 	margin: 0 auto;
-	font-family: var(--font-family);
+	font-family: var(--font-family-base);
 	font-size: 1rem;
-	color: var(--secondary-color);
+	font-weight: var(--font-weight-regular);
+	color: var(--color-text-base);
 	line-height: 1.5;
-	background-color: var(--background-color-content);
+	background-color: var(--color-bg-app);
 	user-select: none;
-	box-shadow: -1px 0 0 rgba(0, 0, 0, .08), 1px 0 0 rgba(0, 0, 0, .08);
+	box-shadow: -1px 0 0 var(--color-border-base), 1px 0 0 var(--color-border-base);
 }
