update css variables

--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -14,5 +14,5 @@ body {
 	line-height: 1.5;
 	background-color: var(--color-bg-app);
 	user-select: none;
-	box-shadow: -1px 0 0 var(--color-border-base), 1px 0 0 var(--color-border-base);
+	box-shadow: -1px 0 0 var(--color-border-app), 1px 0 0 var(--color-border-app);
 }
