--- a/client/src/components/UI/Links/Link/Link.module.scss
+++ b/client/src/components/UI/Links/Link/Link.module.scss
@@ -2,12 +2,12 @@
 	display: flex;
 	align-items: center;
 	gap: 0.1em;
-	color: var(--secondary-color);
+	color: var(--color-link);
 	line-height: 1;
 	cursor: pointer;
 
 	&:hover {
-		color: var(--primary-color);
+		color: var(--color-link-hover);
 	}
 }
 
