--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -3,27 +3,15 @@
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	font-size: 0.9rem;
+	font-size: var(--font-size-sm);
 }
 
-
-	.inner {
-		position: relative;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		height: var(--footer-height);
-		max-width: var(--width-content);
-		margin: 0 auto;
-		background: var(--footer-bg);
-	}
-
-
 .wrapper {
-	max-width: var(--width-content);
+	max-width: var(--app-max-width);
 	margin: 0 auto;
 	padding: 0 11px;
-	background: var(--footer-bg);
+	border-top: 1px solid var(--color-border-base);
+	background-color: var(--color-bg-footer);
 }
 
 .content {
