--- a/client/src/components/UI/Button/Button.module.scss
+++ b/client/src/components/UI/Button/Button.module.scss
@@ -3,22 +3,21 @@
 	justify-content: center;
 	align-items: center;
 	padding: 0.375rem 0.75rem;
-	border: 1px solid rgba(0, 0, 0, 0.08);
+	border: 1px solid var(--color-btn-border);
 	border-radius: 0.25em;
-	color: var(--secondary-color);
-	background-color: var(--background-color-main);
+	color: var(--color-btn-text);
+	background-color: var(--color-btn-bg);
 	cursor: pointer;
-	transition:
-		color 0.15s ease-in-out,
-		background-color 0.15s ease-in-out,
-		border-color 0.15s ease-in-out,
-		box-shadow 0.15s ease-in-out;
+	transition:	background-color 0.15s ease-in-out;
 
 	&.block {
 		width: 100%;
 	}
 	&:hover {
-		background-color: var(--footer-bg);
+		background-color: var(--color-btn-hover);
+	}
+	&:active {
+		background-color: var(--color-btn-active);
 	}
 }
 
