--- a/client/src/components/UI/Input/Input.module.scss
+++ b/client/src/components/UI/Input/Input.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	gap: 2px;
@@ -9,24 +10,29 @@
 
 	&.required::after {
 		content: " *";
-		color: coral;
+		vertical-align: text-top;
+		font-size: var(--font-size-xs);
+		color: var(--color-required);
 	}
 }
 
 .input {
 	padding: 0.375rem 0.75rem;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	appearance: none;
+	border: 1px solid var(--color-input-border);
 	border-radius: 0.25em;
-	color: var(--secondary-color);
-	transition:
-		border-color 0.15s ease-in-out,
-		box-shadow 0.15s ease-in-out;
+	color: inherit;
+	appearance: none;
+	transition:	all 0.15s ease-in-out;
 
-	&.error {
-		border-color: coral;
-	}
 	&:focus {
-		box-shadow: 0 0 0 0.15rem rgba(0, 0, 0, 0.05);
+		box-shadow: 0 0 0 2px var(--color-input-focus-shadow);
 	}
+}
+
+.errorMessage {
+	position: absolute;
+	bottom: -1.5em;
+	left: 0.4em;
+	font-size: var(--font-size-xs);
+	color: var(--color-required);
 }
