--- a/client/src/components/UI/Links/RouterLink/RouterLink.module.scss
+++ b/client/src/components/UI/Links/RouterLink/RouterLink.module.scss
@@ -2,17 +2,17 @@
 	display: flex;
 	align-items: center;
 	gap: 0.1em;
-	color: var(--secondary-color);
+	color: var(--color-link);
 	line-height: 1;
 	cursor: pointer;
 
 	&:hover {
-		color: var(--primary-color);
+		color: var(--color-link-hover);
 	}
 }
 
 .icon {
-	width: 1.5em;
-	height: 1.5em;
+	width: 0.9em;
+	height: 0.9em;
 	fill: currentColor;
 }
