--- a/client/src/components/UI/Links/RouterNavLink/RouterNavLink.module.scss
+++ b/client/src/components/UI/Links/RouterNavLink/RouterNavLink.module.scss
@@ -3,15 +3,15 @@
 	align-items: center;
 	gap: 0.1em;
 	padding: 3px 1px;
-	color: var(--secondary-color);
+	color: var(--color-link);
 	line-height: 1;
 	cursor: pointer;
 
 	&.active {
-		box-shadow: 0 1px 0 var(--secondary-color);
+		box-shadow: 0 1px 0 var(--color-link);
 	}
 	&:hover {
-		color: var(--primary-color);
+		color: var(--color-link-hover);
 	}
 }
 
