--- a/client/src/components/UI/Button/Button.module.scss
+++ b/client/src/components/UI/Button/Button.module.scss
@@ -2,22 +2,36 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 0.375rem 0.75rem;
-	border: 1px solid var(--color-btn-border);
-	border-radius: 0.25em;
 	color: var(--color-btn-text);
-	background-color: var(--color-btn-bg);
 	cursor: pointer;
-	transition:	background-color 0.15s ease-in-out;
+	transition:	all 0.1s ease-in-out;
 
 	&.block {
 		width: 100%;
 	}
-	&:hover {
-		background-color: var(--color-btn-hover);
+	&.outlined {
+		padding: 0.375rem 0.75rem;
+		border: 1px solid var(--color-btn-border);
+		border-radius: 0.25em;
+		background-color: var(--color-btn-bg);
+
+		&:hover {
+			background-color: var(--color-btn-hover);
+		}
+		&:active {
+			background-color: var(--color-btn-active);
+		}
 	}
-	&:active {
-		background-color: var(--color-btn-active);
+	&.link {
+		border: none;
+		background-color: transparent;
+
+		&:hover {
+			color: var(--color-link-hover);
+		}
+		&:active {
+			color: var(--color-link-active);
+		}
 	}
 }
 
