--- a/client/src/components/UI/Button/Button.module.scss
+++ b/client/src/components/UI/Button/Button.module.scss
@@ -4,7 +4,6 @@
 	align-items: center;
 	color: var(--color-btn-text);
 	cursor: pointer;
-	transition:	all 0.1s ease-in-out;
 
 	&.block {
 		width: 100%;
@@ -12,8 +11,9 @@
 	&.outlined {
 		padding: 0.375rem 0.75rem;
 		border: 1px solid var(--color-btn-border);
-		border-radius: 0.25em;
+		border-radius: 0.1em;
 		background-color: var(--color-btn-bg);
+		transition:	background-color 0.1s;
 
 		&:hover {
 			background-color: var(--color-btn-hover);
@@ -33,10 +33,12 @@
 			color: var(--color-link-active);
 		}
 	}
+	&:focus-visible {
+		border: none;
+		outline: 2px solid var(--color-link-active);
+	}
 }
 
 .icon {
-	width: 1.3rem;
-	height: 1.3rem;
 	fill: currentColor;
 }
