--- a/client/src/components/UI/Input/Input.module.scss
+++ b/client/src/components/UI/Input/Input.module.scss
@@ -19,10 +19,11 @@
 .input {
 	padding: 0.375rem 0.75rem;
 	border: 1px solid var(--color-input-border);
-	border-radius: 0.25em;
+	border-radius: 0.1em;
 	color: inherit;
 	appearance: none;
-	transition:	all 0.1s ease-in-out;
+	transition:	box-shadow 0.1s;
+	background-color: var(--color-input-bg);
 
 	&:focus {
 		box-shadow: 0 0 0 2px var(--color-input-focus-shadow);
