update dark theme

--- a/client/src/styles/themes/dark.scss
+++ b/client/src/styles/themes/dark.scss
@@ -3,7 +3,7 @@
 	--color-text-base: #D8D8D8;
 
 	/* background */
-	--color-bg-page: #3A3A3A;
+	--color-bg-page: #232529;
 	--color-bg-app: #383838;
 	--color-bg-header: #3F3F3F;
 	--color-bg-footer: #363636;
