--- a/client/src/components/UI/Divider/Divider.module.scss
+++ b/client/src/components/UI/Divider/Divider.module.scss
@@ -4,22 +4,16 @@
 
 	&.horizontal {
 		width: 100%;
-
-		&.small {
-			height: 1px;
-		}
-		&.middle  {
-			height: 2px;
-		}
+		height: var(--size);
 	}
 	&.vertical {
 		height: 100%;
-
-		&.small {
-			width: 1px;
-		}
-		&.middle  {
-			width: 2px;
-		}
+		width: var(--size);
+	}
+	&.small {
+		--size: 1px;
+	}
+	&.middle {
+		--size: 2px;
 	}
 }
