--- a/client/src/components/UI/Links/Links.module.scss
+++ b/client/src/components/UI/Links/Links.module.scss
@@ -1,22 +1,25 @@
 .link {
 	display: flex;
 	align-items: center;
-	gap: 0.1em;
-	padding: 3px 1px;
+	gap: 0.2em;
 	color: var(--color-link);
 	line-height: 1;
 	cursor: pointer;
+	transition:	color 0.1s;
 
 	&.active {
+		padding: 3px 0;
 		box-shadow: 0 1px 0 var(--color-link);
 	}
 	&:hover {
 		color: var(--color-link-hover);
 	}
+	&:focus-visible {
+		outline: 2px solid var(--color-link-active);
+		//outline-offset: 3px;
+	}
 }
 
 .icon {
-	width: 1.3em;
-	height: 1.3em;
 	fill: currentColor;
 }
