--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -12,7 +12,7 @@
 	margin-top: 15%;
 
 	h1 {
-		font-size: 1.2rem;
-		font-weight: 600;
+		font-size: var(--font-size-lg);
+		font-weight: var(-font-weight-bold);
 	}
 }
