--- a/client/src/components/UI/Links/Links.module.scss
+++ b/client/src/components/UI/Links/Links.module.scss
@@ -7,16 +7,34 @@
 	cursor: pointer;
 	transition:	color 0.1s;
 
-	&.active {
-		padding: 3px 0;
-		box-shadow: 0 1px 0 var(--color-link);
-	}
 	&:hover {
 		color: var(--color-link-hover);
 	}
-	&:focus-visible {
-		outline: 2px solid var(--color-link-active);
-		//outline-offset: 3px;
+
+	&:not(.routerLink, .routerNavLink) {
+		padding-right: 1px;
+
+		&:focus-visible {
+			outline: 1px solid var(--color-link-active);
+		}
+	}
+	&.routerLink:focus-visible {
+		outline: 1px solid var(--color-link-active);
+		outline-offset: 3px;
+	}
+	&.routerNavLink {
+		&.active {
+			padding: 3px 0;
+			box-shadow: 0 1px 0 var(--color-link);
+			&:focus-visible {
+				padding: 0;
+				box-shadow: none;
+			}
+		}
+		&:focus-visible {
+			outline: 1px solid var(--color-link-active);
+			outline-offset: 3px;
+		}
 	}
 }
 
