--- a/client/src/components/UI/Select/Select.module.scss
+++ b/client/src/components/UI/Select/Select.module.scss
@@ -7,14 +7,13 @@
 	height: 100%;
 	padding: 0 24px 0 6px;
 	border: 1px solid var(--color-select-border);
-	border-radius: 0.1em;
 	background-color: var(--color-select-bg);
 	cursor: pointer;
 	user-select: none;
 
 	&:focus-visible {
 		outline: none;
-		border: 2px solid var(--color-select-hover);
+		border-color: var(--color-select-hover);
 	}
 }
 
@@ -31,10 +30,10 @@
 
 .options {
 	position: absolute;
+	right: -1px;
 	bottom: 100%;
-	left: 0;
+	left: -1px;
 	z-index: 1;
-	width: 100%;
 	max-height: 200px;
 	margin-bottom: 3px;
 	border: 1px solid var(--color-select-border);
